--- a/BanList/BanList.vcxproj.filters
+++ b/BanList/BanList.vcxproj.filters
@@ -170,6 +170,9 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="BanList.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="CQP.lib">
